# locallm-agent

./: .gitignore  LICENSE  MODELS.md  README.md  package-lock.json  package.json
native/: CMakeLists.txt  ghost_text.d.ts
native/src/: KeyboardHook.cpp  KeyboardHook.h  OverlayWindow.cpp  OverlayWindow.h  SystemMonitor.cpp  SystemMonitor.h  common.h  main.cpp
src/: aiCouncilDemo.js  aiCouncilService.js  ghostTextIntegration.js  ghostTextService.js  main.js  preload.js
src/renderer/: index.html  renderer.js  styles.css
